--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="index">
     <header class="header" id="header">
-        <object class="header__logo" data="../img/logo-mobile.svg" type="image/svg+xml"></object>
+        <object class="header__logo" data="./img/logo-mobile.svg" type="image/svg+xml"></object>
         <div>
             <input class="checkbox" id="checkbox" type="checkbox" name="checkbox" value="text">
             <label for="checkbox"></label>
