Changes in header

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <label for="checkbox"></label>
             <nav class="nav">
                 <ul>
-                    <li><a href="/">Modo nocturno</a></li>
-                    <li><a href="/">Favoritos</a></li>
-                    <li><a href="/">Mis GIFOS</a></li>
-                    <li><a href="/">Más</a></li>
+                    <li><a href="#">Modo nocturno</a></li>
+                    <li><a href="#">Favoritos</a></li>
+                    <li><a href="#">Mis GIFOS</a></li>
+                    <li><a href="#">Más</a></li>
                 </ul>
             </nav>
         </div>
