Trending sections modified

--- a/index.html
+++ b/index.html
@@ -43,41 +43,46 @@
         <p class="trending__p p--normal">Mira los últimos <span class="trending__p--line"></span> GIFOS de nuestra comunidad.</p>
         <div class="trending__carousel">
             <div class="carousel-item">
-                <div class="carousel-item__img"></div>
+                <img class="carousel-item__img" src="https://images.pexels.com/photos/5946971/pexels-photo-5946971.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
                 <div class="carousel-item__details">
-                    <button class="button fav-icon" type="submit"></button>
-                    <button class="button expand-icon" type="submit"></button>
-                    <button class="button download-icon" type="submit"></button>
-                </div>
-                <div class="carousel-item__text">
-                    <p class="carousel-item__text--user">User</p>
-                    <p class="carousel-item__text--title">Título GIFO</p>
+                    <div class="carousel-item__icons">
+                        <button class="button fav-icon" type="submit"></button>
+                        <button class="button expand-icon" type="submit"></button>
+                        <button class="button download-icon" type="submit"></button>
+                    </div>
+                    <div class="carousel-item__text">
+                        <p class="carousel-item__text--user">User</p>
+                        <p class="carousel-item__text--title">Título GIFO</p>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-item__img"></div>
+                <img class="carousel-item__img" src="https://images.pexels.com/photos/5946971/pexels-photo-5946971.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
                 <div class="carousel-item__details">
-                    <button class="button fav-icon" type="submit"></button>
-                    <button class="button expand-icon" type="submit"></button>
-                    <button class="button download-icon" type="submit"></button>
-                </div>
-                <div class="carousel-item__text">
-                    <p class="carousel-item__text--user">User</p>
-                    <p class="carousel-item__text--title">Título GIFO</p>
+                    <div class="carousel-item__icons">
+                        <button class="button fav-icon" type="submit"></button>
+                        <button class="button expand-icon" type="submit"></button>
+                        <button class="button download-icon" type="submit"></button>
+                    </div>
+                    <div class="carousel-item__text">
+                        <p class="carousel-item__text--user">User</p>
+                        <p class="carousel-item__text--title">Título GIFO</p>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-item__img"></div>
+                <img class="carousel-item__img" src="https://images.pexels.com/photos/5946971/pexels-photo-5946971.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
                 <div class="carousel-item__details">
-                    <button class="button fav-icon" type="submit"></button>
-                    <button class="button expand-icon" type="submit"></button>
-                    <button class="button download-icon" type="submit"></button>
+                    <div class="carousel-item__icons">
+                        <button class="button fav-icon" type="submit"></button>
+                        <button class="button expand-icon" type="submit"></button>
+                        <button class="button download-icon" type="submit"></button>
+                    </div>
+                    <div class="carousel-item__text">
+                        <p class="carousel-item__text--user">User</p>
+                        <p class="carousel-item__text--title">Título GIFO</p>
+                    </div>
                 </div>
-                <div class="carousel-item__text">
-                    <p class="carousel-item__text--user">User</p>
-                    <p class="carousel-item__text--title">Título GIFO</p>
-                </div>
-                
             </div>
         </div>
     </section>
