--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 class="main__h1 h1">Inspírate, busca, guarda, y crea los mejores <span class="h1--green">GIFOS</span></h1>
         <object class="main__object" data="./img/ilustra_header.svg" type="image/svg+xml"></object>
         <div class="search-bar" id="search-bar">
-            <input class="search-bar__input" type="text" placeholder="Busca GIFOS y más">
+            <input class="search-bar__input" id="search-bar__input" type="text" placeholder="Busca GIFOS y más">
             <button class="search-bar__button" type="submit"><object data="./img/icon-search.svg" type="image/svg+xml"></object></button>
         </div>
         <h3 class="main__h3 h3">Trending:</h3>
@@ -39,11 +39,11 @@
     </main>
 
     <section class="trending">
-        <h2 class="trending__h2 h2">Trending GIFOS</h2>
-        <p class="trending__p p--normal">Mira los últimos <span class="trending__p--line"></span> GIFOS de nuestra comunidad.</p>
+        <h2 class="h2">Trending GIFOS</h2>
+        <p class="trending__p p--normal">Mira los últimos <span class="trending__p--span"></span> GIFOS de nuestra comunidad.</p>
         <div class="trending__carousel">
             <div class="carousel-item">
-                <img class="carousel-item__img" src="https://images.pexels.com/photos/5946971/pexels-photo-5946971.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
+                <img class="carousel-item__img" src="https://images.pexels.com/photos/4220967/pexels-photo-4220967.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
                 <div class="carousel-item__details">
                     <div class="carousel-item__icons">
                         <button class="button fav-icon" type="submit"></button>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="carousel-item__img" src="https://images.pexels.com/photos/5946971/pexels-photo-5946971.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
+                <img class="carousel-item__img" src="https://images.pexels.com/photos/3284167/pexels-photo-3284167.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
                 <div class="carousel-item__details">
                     <div class="carousel-item__icons">
                         <button class="button fav-icon" type="submit"></button>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="carousel-item__img" src="https://images.pexels.com/photos/5946971/pexels-photo-5946971.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
+                <img class="carousel-item__img" src="https://images.pexels.com/photos/3560044/pexels-photo-3560044.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
                 <div class="carousel-item__details">
                     <div class="carousel-item__icons">
                         <button class="button fav-icon" type="submit"></button>
@@ -97,6 +97,7 @@
         <p class="footer__p--copy p--xsmall">&#xa9; GIFOS 2020 All Rights Reserved</p>
     </footer>
 
-    <script src="./scripts/search-bar.js"></script>
+    <!-- <script src="./scripts/search-bar.js"></script> -->
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
