--- a/no-results.html
+++ b/no-results.html
@@ -10,9 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <span class="divisory-line"></span>
-    <h1 class="h2">Lorem Ipsum</h1>
-    <div class="no-results__search"></div>
-    <p class="no-results__text">Intenta con otra búsqueda.</p>
+    <section class="no-results">
+        <span class="divisory-line"></span>
+        <h1 class="h2">Lorem Ipsum</h1>
+        <div class="no-results__search"></div>
+        <p class="no-results__text">Intenta con otra búsqueda.</p>
+    </section>
+    
 </body>
 </html>
