--- a/search-results.html
+++ b/search-results.html
@@ -13,7 +13,7 @@
     <section class="search-results">
         <span class="divisory-line"></span>
         <h1 class="h1">Paisajes</h1>
-        <div class="gallery">
+        <div class="gallery" id="search-container">
             <img class="gallery__gifo" src="https://images.pexels.com/photos/1770809/pexels-photo-1770809.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
             <img class="gallery__gifo" src="https://images.pexels.com/photos/3464632/pexels-photo-3464632.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
             <img class="gallery__gifo" src="https://images.pexels.com/photos/2440061/pexels-photo-2440061.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
