--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIFOS</title>
-    <link rel="icon" href="./img/burger.svg" type="image/svg+xml">
+    <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+
 </head>
-<body class="index">
+<body>
+
     <header class="header" id="header">
         <object class="header__logo" data="./img/logo-mobile.svg" type="image/svg+xml"></object>
         <div>
@@ -26,66 +27,59 @@
             </nav>
         </div>
     </header>
-    
-    <main class="main">
+
+    <main class="main" id="main">
         <h1 class="main__h1 h1">Inspírate, busca, guarda, y crea los mejores <span class="h1--green">GIFOS</span></h1>
         <object class="main__object" data="./img/ilustra_header.svg" type="image/svg+xml"></object>
         <div class="search-bar" id="search-bar">
-            <input class="search-bar__input" id="search-bar__input" type="text" placeholder="Busca GIFOS y más">
-            <button class="search-bar__button" type="submit"><object data="./img/icon-search.svg" type="image/svg+xml"></object></button>
+            <div class="search-bar__components">
+                <div class="search-bar__icon"></div>
+                <!-- <object data="./img/search-big.svg" type="image/svg+xml"></object> -->
+                <input class="search-bar__input" id="search-bar__input" type="text" placeholder="Busca GIFOS y más">
+                <button class="search-bar__button" type="submit"></button>
+            </div>
+            <div class="search-bar__results"><span class="search-line"></span></div>
+            <ul id="suggestions-list" class="search-bar__suggestions"></ul>
         </div>
         <h3 class="main__h3 h3">Trending:</h3>
-        <p class="main__p p--xsmall">Reactions, Entertainment, Sports, Stickers, Artists</p>
+        <div id="trends-container" class="main__p p--xsmall"></div>
     </main>
+
+    <section class="search-results">
+        <span class="divisory-line"></span>
+        <h1 class="h1" id="search-title"></h1>
+        <div class="gallery" id="search-container"></div>
+        <button class="watch-more-button" id="more-results-btn" type="submit"></button>
+    </section>
+
+    <section class="no-results">
+        <span class="divisory-line"></span>
+        <h1 class="h2">Lorem Ipsum</h1>
+        <div class="no-results__search"></div>
+        <p class="no-results__text">Intenta con otra búsqueda.</p>
+    </section>
 
     <section class="trending">
         <h2 class="h2">Trending GIFOS</h2>
         <p class="trending__p p--normal">Mira los últimos <span class="trending__p--span"></span> GIFOS de nuestra comunidad.</p>
-        <div class="trending__carousel">
-            <div class="carousel-item">
-                <img class="carousel-item__img" src="https://images.pexels.com/photos/4220967/pexels-photo-4220967.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
-                <div class="carousel-item__details">
-                    <div class="carousel-item__icons">
-                        <button class="button fav-icon" type="submit"></button>
-                        <button class="button expand-icon" type="submit"></button>
-                        <button class="button download-icon" type="submit"></button>
-                    </div>
-                    <div class="carousel-item__text">
-                        <p class="carousel-item__text--user">User</p>
-                        <p class="carousel-item__text--title">Título GIFO</p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="carousel-item__img" src="https://images.pexels.com/photos/3284167/pexels-photo-3284167.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
-                <div class="carousel-item__details">
-                    <div class="carousel-item__icons">
-                        <button class="button fav-icon" type="submit"></button>
-                        <button class="button expand-icon" type="submit"></button>
-                        <button class="button download-icon" type="submit"></button>
-                    </div>
-                    <div class="carousel-item__text">
-                        <p class="carousel-item__text--user">User</p>
-                        <p class="carousel-item__text--title">Título GIFO</p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="carousel-item__img" src="https://images.pexels.com/photos/3560044/pexels-photo-3560044.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">
-                <div class="carousel-item__details">
-                    <div class="carousel-item__icons">
-                        <button class="button fav-icon" type="submit"></button>
-                        <button class="button expand-icon" type="submit"></button>
-                        <button class="button download-icon" type="submit"></button>
-                    </div>
-                    <div class="carousel-item__text">
-                        <p class="carousel-item__text--user">User</p>
-                        <p class="carousel-item__text--title">Título GIFO</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="trending__carousel" id="images-container"></div>
     </section>
+
+    <div class="max-gif">
+        <figure class="figure">
+            <button class="button-close close-icon" id="button-close" type="submit"></button>
+            <img class="figure__img">
+            <!-- <img class="figure__img" src="https://images.pexels.com/photos/4220967/pexels-photo-4220967.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"> -->
+            <figcaption class="figure__caption">
+                <div class="figure__caption-text">
+                    <p class="p--small" id="gif-user"></p>
+                    <p class="p--normal" id="gif-title"></p>
+                </div>
+                <button class="button fav-icon" type="submit"></button>
+                <button class="button download-icon" id="button-download" type="submit"></button>
+            </figcaption>
+        </figure>
+    </div>
 
     <footer class="footer">
         <p class="footer__p--share p--small">Compartir en:</p>
@@ -97,7 +91,12 @@
         <p class="footer__p--copy p--xsmall">&#xa9; GIFOS 2020 All Rights Reserved</p>
     </footer>
 
-    <!-- <script src="./scripts/search-bar.js"></script> -->
     <script src="./scripts/main.js"></script>
+    <script src="./scripts/search-bar.js"></script>
+    <script src="./scripts/fetch.js"></script>
+    <script src="./scripts/gallery.js"></script>
+    <script src="./scripts/maxgif.js"></script>
+    
+
 </body>
 </html>
