Add hover style to cards

--- a/downloadImage.html
+++ b/downloadImage.html
@@ -13,6 +13,7 @@
             <img id="img" src="https://images.pexels.com/photos/4077180/pexels-photo-4077180.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width="600" height="120">
         </div>
     </form>
+    <a class="download-button" download="Mad Space Jam_brhSNsofyzUtxI5dPg" href="blob:https://crst017.github.io/a81284a4-0757-4c87-b9a3-b1dd5c4d4ffc">Hola</a>
 </body>
 
     <script type="text/javascript">
@@ -33,7 +34,7 @@
                 a.download = "myImage";
 
                 const urlBlob = URL.createObjectURL(file);
-                // console.log(urlBlob);
+                console.log(urlBlob);
 
                 a.href = urlBlob;
                 a.textContent = "Download";
