--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                     <p class="p--normal" id="gif-title"></p>
                 </div>
                 <button class="button fav-icon" type="submit"></button>
-                <button class="button download-icon" id="button-download" type="submit"></button>
+                <a class="button download-icon" id="download-link">
+                    <!-- <button class="button download-icon" id="button-download" type="submit"></button> -->
+                </a>
             </figcaption>
         </figure>
     </div>
@@ -92,6 +94,7 @@
     </footer>
 
     <script src="./scripts/main.js"></script>
+    <script src="./scripts/download.js"></script>
     <script src="./scripts/search-bar.js"></script>
     <script src="./scripts/fetch.js"></script>
     <script src="./scripts/gallery.js"></script>
