--- a/max-gif.html
+++ b/max-gif.html
@@ -21,7 +21,7 @@
                     <p class="p--normal" id="gif-title">Título GIFO</p>
                 </div>
                 <button class="button fav-icon" type="submit"></button>
-                <button class="button download-icon" type="submit"></button>
+                <button class="button download-icon" id="button-download" type="submit"></button>
             </figcaption>
         </figure>
     </div>
