Feat download btn on max gif

--- a/index.html
+++ b/index.html
@@ -65,20 +65,17 @@
         <div class="trending__carousel" id="images-container"></div>
     </section>
 
-    <div class="max-gif">
+    <div class="max-gif" id="max-gif">
         <figure class="figure">
             <button class="button-close close-icon" id="button-close" type="submit"></button>
             <img class="figure__img">
-            <!-- <img class="figure__img" src="https://images.pexels.com/photos/4220967/pexels-photo-4220967.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"> -->
             <figcaption class="figure__caption">
                 <div class="figure__caption-text">
                     <p class="p--small" id="gif-user"></p>
                     <p class="p--normal" id="gif-title"></p>
                 </div>
                 <button class="button fav-icon" type="submit"></button>
-                <a class="button download-icon" id="download-link">
-                    <!-- <button class="button download-icon" id="button-download" type="submit"></button> -->
-                </a>
+                <button class="button download-icon" id="button-download" type="submit"><a></a></button>
             </figcaption>
         </figure>
     </div>
@@ -99,7 +96,5 @@
     <script src="./scripts/fetch.js"></script>
     <script src="./scripts/gallery.js"></script>
     <script src="./scripts/maxgif.js"></script>
-    
-
 </body>
 </html>
