Feat download gif on hover action

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p class="p--normal" id="gif-title"></p>
                 </div>
                 <button class="button fav-icon" type="submit"></button>
-                <button class="button download-icon" id="button-download" type="submit"><a></a></button>
+                <button class="button download-icon" id="button-download" type="submit"></button>
             </figcaption>
         </figure>
     </div>
