Feat logo funtion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="header" id="header">
-        <object class="header__logo" data="./img/logo-mobile.svg" type="image/svg+xml"></object>
+        <div class="header__logo" id="header__logo"></div> 
         <div>
             <input class="checkbox" id="checkbox" type="checkbox" name="checkbox" value="text">
             <label for="checkbox"></label>
