--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <p class="p--small" id="gif-user"></p>
                     <p class="p--normal" id="gif-title"></p>
                 </div>
-                <button class="button fav-icon" type="submit"></button>
+                <button class="button fav-icon" id="fav-icon" type="submit"></button>
                 <button class="button download-icon" id="button-download" type="submit"></button>
             </figcaption>
         </figure>
