--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="footer__media">
             <a class="facebook-icon" id="facebook-icon" href="https://www.facebook.com" target="_blank"></a>
             <a class="twitter-icon" id="twitter-icon" href="https://www.twitter.com" target="_blank"></a>
-            <a class="instagram-icon" class="instagram-icon" href="https://www.instagram.com/" target="_blank"></a>
+            <a class="instagram-icon" id="instagram-icon" href="https://www.instagram.com/" target="_blank"></a>
         </div>
         <p class="footer__p--copy p--xsmall">&#xa9; GIFOS 2020 All Rights Reserved</p>
     </footer>
