Feat: create gifo section

--- a/create-gifo-1.html
+++ b/create-gifo-1.html
@@ -11,11 +11,26 @@
 </head>
 <body>
     <section class="create-gifo">
+        <div class="camera-img"></div>
+        <div class="camera-light"></div>
         <div class="create-gifo__screen">
+            <div class="create-gifo__corners">
+                <div class="border-one"></div>
+                <div class="border-two"></div>
+                <div class="border-three"></div>
+                <div class="border-four"></div>
+            </div>
+            
             <h2 class="create-gifo__h2 h2">Aquí podrás <span class="create-gifo__p--span"></span>crear tus propios <span class="h1--green">GIFOS</span></h2>
             <p class="p--normal">¡Crea tu gifo en sólo 3 pasos! <br> (sólo necesitas una cámara para grabar un video)</p>
         </div>
-        <div class="create-gifo__steps">Numeros</div>
+        
+        <div class="pelicula-img"></div>
+        <div class="create-gifo__steps">
+            <div class="create-gifo__steps--one">1</div>
+            <div class="create-gifo__steps--two">2</div>
+            <div class="create-gifo__steps--three">3</div>
+        </div>
         <div class="create-gifo__division"></div>
         <button class="start-button" type="submit">COMENZAR</button>
     </section>
