--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 <body class="body" id="body">
 
+    <!-- Arreglar de favoritos a logo -> Lupa morada a blanca -->
+    <!-- Merificar que no haya mouseover en mobile -->
+    <!-- Botón ver más para favoritos -->
+
     <header class="header" id="header">
         <div class="header__logo" id="header__logo"></div> 
         <div>
@@ -22,7 +26,7 @@
                     <li><a id="nav-night">Modo nocturno</a></li>
                     <li><a id="nav-favorites" href="#">Favoritos</a></li>
                     <li><a id="nav-gifos" href="#">Mis GIFOS</a></li>
-                    <li><a href="#">Más</a></li>
+                    <li><a class="nav-more" id="nav-more" href="#"></a></li>
                 </ul>
             </nav>
         </div>
@@ -68,6 +72,31 @@
             <div class="no-results__gifos"></div>
             <p class="no-results__text">¡Anímate a crear tu primer GIFO!</p>
         </div>
+    </section>
+
+    <section class="create-gifo" id="create-gifo">
+        <div class="camera-img"></div>
+        <div class="camera-light"></div>
+        <div class="create-gifo__screen">
+            <div class="create-gifo__corners">
+                <div class="border-one"></div>
+                <div class="border-two"></div>
+                <div class="border-three"></div>
+                <div class="border-four"></div>
+            </div>
+            
+            <h2 class="create-gifo__h2 h2">Aquí podrás <span class="create-gifo__p--span"></span>crear tus propios <span class="h1--green">GIFOS</span></h2>
+            <p class="p--normal">¡Crea tu gifo en sólo 3 pasos! <br> (sólo necesitas una cámara para grabar un video)</p>
+        </div>
+        
+        <div class="pelicula-img"></div>
+        <div class="create-gifo__steps">
+            <div class="create-gifo__steps--one">1</div>
+            <div class="create-gifo__steps--two">2</div>
+            <div class="create-gifo__steps--three">3</div>
+        </div>
+        <div class="create-gifo__division"></div>
+        <button class="start-button" type="submit">COMENZAR</button>
     </section>
 
     <section class="search-results" id="search-results">
@@ -118,7 +147,6 @@
     <script src="./scripts/main.js"></script>
     <script src="./scripts/nav-bar.js"></script>
     <script src="./scripts/night-mode.js"></script>
-    <script src="./scripts/download.js"></script>
     <script src="./scripts/search-bar.js"></script>
     <script src="./scripts/fetch.js"></script>
     <script src="./scripts/gallery.js"></script>
