Fix navbar create gifo button

--- a/create-gifo-1.html
+++ b/create-gifo-1.html
@@ -35,5 +35,6 @@
         <button class="start-button" type="submit">COMENZAR</button>
     </section>
     
+    <!-- Agg styles night button & numeros -->
 </body>
 </html>
