--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
 
     <section class="create-gifo" id="create-gifo">
-        <div class="camera-img"></div>
+        <div class="camera-img" id="camera-img"></div>
         <div class="camera-light"></div>
         <div class="create-gifo__screen">
             <div class="create-gifo__corners">
@@ -89,7 +89,7 @@
             <p class="p--normal">¡Crea tu gifo en sólo 3 pasos! <br> (sólo necesitas una cámara para grabar un video)</p>
         </div>
         
-        <div class="pelicula-img"></div>
+        <div class="pelicula-img" id="pelicula-img"></div>
         <div class="create-gifo__steps">
             <div class="create-gifo__steps--one">1</div>
             <div class="create-gifo__steps--two">2</div>
