Refactor 'Mis gifos' section

--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
         <div class="favorites__icon"><img src="./img/icon-mis-gifos.svg" alt="My gifos icon"></div>
         <h2 class="h2">Mis gifos</h2>
 
-        <div class="gifos__no-results">
+        <div class="gifos__no-results" id="gifos__no-results">
             <div class="no-results__gifos"></div>
             <p class="no-results__text">¡Anímate a crear tu primer GIFO!</p>
+        </div>
+
+        <div class="gifos__results" id="gifos__results">
+            <div class="gallery" id="mygifos-container"></div>
+            <button class="watch-more-button" type="submit"></button>
         </div>
     </section>
 
