Fix video box size

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <div class="camera-img" id="camera-img"></div>
         <div class="camera-light"></div>
         <div class="create-gifo__screen">
-            <div class="create-gifo__corners">
+            <span class="create-gifo__corners">
                 <div class="border-one"></div>
                 <div class="border-two"></div>
                 <div class="border-three"></div>
                 <div class="border-four"></div>
-            </div>
+            </span>
             
             <h2 class="create-gifo__h2 h2" id="create-gifo__h2">Aquí podrás <span class="create-gifo__p--span"></span>crear tus propios <span class="h1--green">GIFOS</span></h2>
             <p class="p--normal" id="create-gifo__p">¡Crea tu gifo en sólo 3 pasos! <br> (sólo necesitas una cámara para grabar un video)</p>
