Refactor html typos

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <div class="camera-img" id="camera-img"></div>
         <div class="camera-light"></div>
         <div class="create-gifo__screen">
-            <span class="create-gifo__corners">
+            <div class="create-gifo__corners">
                 <div class="border-one"></div>
                 <div class="border-two"></div>
                 <div class="border-three"></div>
                 <div class="border-four"></div>
-            </span>
+            </div>
             
             <h2 class="create-gifo__h2 h2" id="create-gifo__h2">Aquí podrás <span class="create-gifo__p--span"></span>crear tus propios <span class="h1--green">GIFOS</span></h2>
             <p class="p--normal" id="create-gifo__p">¡Crea tu gifo en sólo 3 pasos! <br> (sólo necesitas una cámara para grabar un video)</p>
@@ -94,7 +94,7 @@
                 <video id="video-box" class="video-box"></video>
                 <div class="video-info" id="video-info">
                     <div class="video-info__icons">
-                        <button class="button download-icon" id="button-download" type="submit"></button>
+                        <button class="button download-icon" id="button-download-video" type="submit"></button>
                         <button class="button link-icon" id="button-getlink" type="submit"></button>
                     </div>
                     <div class="video-info__text">
@@ -120,20 +120,20 @@
 
     <section class="search-results" id="search-results">
         <span class="divisory-line"></span>
-        <h1 class="h1" id="search-title"></h1>
+        <h2 class="h1" id="search-title">Search Title</h2>
         <div class="gallery" id="search-container"></div>
         <button class="watch-more-button" id="more-results-btn" type="submit"></button>
     </section>
 
     <section class="no-results">
         <span class="divisory-line"></span>
-        <h1 class="h2">Lorem Ipsum</h1>
+        <h2 class="h2">Lorem Ipsum</h2>
         <div class="no-results__search"></div>
         <p class="no-results__text">Intenta con otra búsqueda.</p>
     </section>
 
     <section class="trending" id="trending">
-        <h2 class="h2">Trending GIFOS</h2>
+        <h2 class="h1">Trending GIFOS</h2>
         <p class="trending__p p--normal" id="p-night">Mira los últimos <span class="trending__p--span"></span> GIFOS de nuestra comunidad.</p>
         <div class="trending__carousel" id="images-container"></div>
     </section>
@@ -141,7 +141,7 @@
     <div class="max-gif" id="max-gif">
         <figure class="figure">
             <button class="button-close close-icon" id="button-close" type="submit"></button>
-            <img class="figure__img">
+            <img class="figure__img" src="/" alt="Gifo Image">
             <figcaption class="figure__caption">
                 <div class="figure__caption-text">
                     <p class="p--small" id="gif-user"></p>
